MPDZ2-695resolve linter annotations ZammadSyncServiceSubtreeUtil